tests/NormalTests/paczka1/small_fuzzy/28952186.err
Error in line 3: 2EcIqJsCwqy A698 80,4
Error in line 6: 2EcIqJsCwqy S592 71,8
Error in line 11: 07eEPrDuZJo A698 51,2
Error in line 12: 07eEPrDuZJo S592 8,3
